--- a/css-responsive_playground/index.html
+++ b/css-responsive_playground/index.html
@@ -52,8 +52,13 @@
             there's some material in there.
           </p>
           <div class="box box--five">
+            <picture>
+              <source media="(min-with: 600px)" srcset="./img/cat_medium.jpg" />
+              <source media="(min-with: 1200px)" srcset="./img/cat_large.jpg" />
+              <img src="./img/cat_small.jpg" alt="A cat" />
+            </picture>
+
             <!-- Perhaps you may want to use the <picture> Element here? -->
-            <img src="./img/cat_small.jpg" alt="A cat" />
           </div>
         </section>
       </section>
