--- a/css-responsive_playground/index.html
+++ b/css-responsive_playground/index.html
@@ -53,8 +53,14 @@
           </p>
           <div class="box box--five">
             <picture>
-              <source media="(min-with: 600px)" srcset="./img/cat_medium.jpg" />
-              <source media="(min-with: 1200px)" srcset="./img/cat_large.jpg" />
+              <source
+                media="(min-width: 600px)"
+                srcset="./img/cat_medium.jpg"
+              />
+              <source
+                media="(min-width: 1200px)"
+                srcset="./img/cat_large.jpg"
+              />
               <img src="./img/cat_small.jpg" alt="A cat" />
             </picture>
 
