--- a/html-forms_Finding-a11y-errors/index.html
+++ b/html-forms_Finding-a11y-errors/index.html
@@ -16,14 +16,16 @@
         Please let us know how we can support you with a11y issues.
       </p>
 
-      <form for="title">
-        <fieldset>
+      <form for="title" aria-labelledby="title">
+        <fieldset aria-labelledby="description">
           <legend>Enter your information</legend>
-          <label aria-describedby="name-input">Name:</label>
+          <label for="name-Input" aria-describedby="name-input">Name:</label>
           <input id="name-Input" type="text" name="name" />
-          <label aria-describedby="age-input">Age:</label>
+          <label for="age-Input" aria-describedby="age-input">Age:</label>
           <input id="age-Input" type="text" name="age" />
-          <label aria-describedby="color-input">Color you cannot see:</label>
+          <label for="color-Input" aria-describedby="color-input"
+            >Color you cannot see:</label
+          >
           <input id="color-Input" type="color" name="color" />
           <textarea rows="7" placeholder="Leave us a message..."></textarea>
           <button type="submit">Submit</button>
