--- a/html-forms_Finding-a11y-errors/index.html
+++ b/html-forms_Finding-a11y-errors/index.html
@@ -6,12 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Forms and A11y</title>
+    <title>Forms and Ally</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section>
-      <h1 class="title">Understanding A11y in Forms</h1>
+      <h1 class="title">Understanding Ally in Forms</h1>
       <p id="description">
         Please let us know how we can support you with a11y issues.
       </p>
