--- a/js-inputs-and-strings_switch-values/index.html
+++ b/js-inputs-and-strings_switch-values/index.html
@@ -22,6 +22,7 @@
       <p id="help-text">Type something to test your buttons.</p>
       <button type="button" data-js="button-uppercase">&uarr;</button>
       <button type="button" data-js="button-lowercase">&darr;</button>
+      <button type="button" data-js="button-switch">&updownarrow;</button>
     </form>
     <script src="./js/index.js" defer></script>
   </body>
