--- a/js-forms_calculator/index.html
+++ b/js-forms_calculator/index.html
@@ -34,6 +34,7 @@
 
           <label for="addition">
             <input
+              data-js="addition"
               type="radio"
               name="operator"
               id="addition"
@@ -45,6 +46,7 @@
 
           <label for="subtraction">
             <input
+              data-js="subtraction"
               type="radio"
               name="operator"
               id="subtraction"
@@ -55,6 +57,7 @@
 
           <label for="multiplication">
             <input
+              data-js="multiplication"
               type="radio"
               name="operator"
               id="multiplication"
@@ -65,6 +68,7 @@
 
           <label for="division">
             <input
+              data-js="division"
               type="radio"
               name="operator"
               id="division"
